# libknn

./: .gitignore  CMakeLists.txt  LICENSE  benchmark.md  plan.txt  readme.md  requirements.txt
experiments/: bench_many.py  bench_once.py  proof_of_concept.py  threading_config.py
scripts/: make_data.py
src/: CentroidClassifier.cc  CentroidClassifier.h  KNN.cc  KNN.h  KNN_cuda.cu  KNN_cuda.h  Sample.cc  Sample.h  main.cc  metrics.cc  test_gpu_monitoring.cu  utils.cc
test_gpu_monitoring/: CMakeLists.txt
